--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-modName = TeK CaY Simple Addon
+modName = Gregtech Beyond Core
 
 # This is a case-sensitive string to identify your mod. Convention is to use lower case.
-modId = tkcysa
+modId = gtb
 
-modGroup = tkcy
+modGroup = gtb
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
@@ -13,7 +13,7 @@ modVersion = 0.1-GT-2.7.4
 includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = TeKCaYSimpleAddon
+modArchivesBaseName = GregtechBeyondCore
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
@@ -33,7 +33,7 @@ developmentEnvironmentUserName = Developer
 enableModernJavaSyntax = true
 
 # Generate a class with String fields for the mod id, name and version named with the fields below
-generateGradleTokenClass = tkcy.TKCYSAInternalTags
+generateGradleTokenClass = gtb.GTBInternalTags
 gradleTokenModId = MODID
 gradleTokenModName = MODNAME
 gradleTokenVersion = VERSION
