edited gradle stuff

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ modGroup = gtb
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 0.1-GT-2.7.4
+modVersion = 0.1-GT-2.8.7
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
 includeMCVersionJar = false
@@ -90,7 +90,7 @@ separateRunDirectories = false
 # The project's ID on Modrinth. Can be either the slug or the ID.
 # Leave this empty if you don't want to publish on Modrinth.
 # Alternatively this can be set with the 'MODRINTH_PROJECT_ID' environment variable.
-modrinthProjectId = tZiutdLG
+modrinthProjectId =
 
 # The project's relations on Modrinth. You can use this to refer to other projects on Modrinth.
 # Syntax: scope1-type1:name1;scope2-type2:name2;...
@@ -106,7 +106,7 @@ modrinthRelations = required-project:gregtech-ce-unofficial
 # The project's numeric ID on CurseForge. You can find this in the About Project box.
 # Leave this empty if you don't want to publish on CurseForge.
 # Alternatively this can be set with the 'CURSEFORGE_PROJECT_ID' environment variable.
-curseForgeProjectId = 564858
+curseForgeProjectId =
 
 # The project's relations on CurseForge. You can use this to refer to other projects on CurseForge.
 # Syntax: type1:name1;type2:name2;...
