--- a/build.gradle
+++ b/build.gradle
@@ -458,6 +458,7 @@ configurations {
 
 String mixinProviderSpec = 'zone.rong:mixinbooter:8.9'
 dependencies {
+    implementation 'org.projectlombok:lombok:1.18.26'
     if (usesMixins.toBoolean()) {
         annotationProcessor 'org.ow2.asm:asm-debug-all:5.2'
         // should use 24.1.1 but 30.0+ has a vulnerability fix
