--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -24,13 +24,10 @@
 dependencies {
 
 
-    // Hard Dependencies
-    // the CCL deobf jar uses very old MCP mappings, making it error at runtime in runClient/runServer
-    // therefore we manually deobf the regular jar
+    //Hard Dependencies
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848") // CCL 3.2.3.358
-    // manually deobf the jar to prevent extra configuration for handling obf/deobf separation
-    //curse.maven:gregtech-ce-unofficial-<Project ID>:<modJarPageUrl>-deobf-<devJarPageUrl>-sources-<sourcesJarPageUrl>
     implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5121638-deobf-5121639-sources-5121640") //2.8.7
+    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714-deobf-5121717-sources-5121718") //1.2.8
 
 
     // Soft Dependencies
