remove unnecessary gcym hard dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -98,7 +98,7 @@ modrinthProjectId =
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
 # Example: required-project:jei;optional-project:top;incompatible-project:gregtech
-modrinthRelations = required-project:gregtech-ce-unofficial;required-project:gregicality-multiblocks
+modrinthRelations =
 
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
