--- a/build.gradle
+++ b/build.gradle
@@ -504,6 +504,7 @@ dependencies {
 
     compileOnlyApi 'org.jetbrains:annotations:24.1.0'
     annotationProcessor 'org.jetbrains:annotations:24.1.0'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
     patchedMinecraft('net.minecraft:launchwrapper:1.17.2') {
         transitive = false
     }
