--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,7 +28,7 @@ dependencies {
     //Hard Dependencies
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848") // CCL 3.2.3.358
     implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5322654-deobf-5322655-sources-5322656") //2.8.8
-
+    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121718")
     // Soft Dependencies
     implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.684"
     implementation rfg.deobf("curse.maven:ctm-267602:2915363") // CTM 1.0.2.31
