--- a/gradle.properties
+++ b/gradle.properties
@@ -99,7 +99,10 @@ modrinthProjectId =
 #       type can be one of [project, version],
 #       and the name is the Modrinth project or version slug/id of the other mod.
 # Example: required-project:jei;optional-project:top;incompatible-project:gregtech
-modrinthRelations = required-project:gregtech-ce-unofficial;required-project:gregicality-multiblocks
+modrinthRelations = \
+  required-project:gregtech-ce-unofficial;\
+  required-project:gregicality-multiblocks;\
+  requiredDependency:gregtech-food-option;
 
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
@@ -114,7 +117,12 @@ curseForgeProjectId =
 # Where type can be one of [requiredDependency, embeddedLibrary, optionalDependency, tool, incompatible],
 #       and the name is the CurseForge project slug of the other mod.
 # Example: requiredDependency:railcraft;embeddedLibrary:cofhlib;incompatible:buildcraft
-curseForgeRelations = requiredDependency:codechicken-lib-1-8;requiredDependency:gregtech-ce-unofficial;requiredDependency:gregicality-multiblocks;incompatible:gregtechce
+curseForgeRelations = \
+  requiredDependency:codechicken-lib-1-8;\
+  requiredDependency:gregtech-ce-unofficial;\
+  requiredDependency:gregicality-multiblocks;\
+  requiredDependency:gregtech-food-option;\
+  incompatible:gregtechce
 
 # This project's release type on CurseForge and/or Modrinth
 # Alternatively this can be set with the 'RELEASE_TYPE' environment variable.
