--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714")
     implementation rfg.deobf("curse.maven:gregtech-food-option-477021:5155451")
     implementation rfg.deobf("curse.maven:groovyscript-687577:4905039") // GRS 0.7.0
+    implementation rfg.deobf("curse.maven:ctm-267602:2915363")
+
+    implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.684"
 
 }
 
