--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -27,10 +27,9 @@ dependencies {
 
     //Hard Dependencies
     implementation rfg.deobf("curse.maven:codechicken-lib-1-8-242818:2779848") // CCL 3.2.3.358
-    implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5322654-deobf-5322655-sources-5322656") //2.8.8
-    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5121714-deobf-5121717-sources-5121718") //1.2.8
-    implementation rfg.deobf("curse.maven:gregtech-food-option-477021:5155451-deobf-5155452-sources-5155453") //1.11.1
-
+    implementation rfg.deobf("curse.maven:gregtech-ce-unofficial-557242:5519022") // 2.8.10
+    implementation rfg.deobf("curse.maven:gregicality-multiblocks-564858:5619513") // 1.2.11
+    implementation rfg.deobf("curse.maven:gregtech-food-option-477021:6147619") // 1.12.4
 
     //Soft Dependency
     implementation "CraftTweaker2:CraftTweaker2-MC1120-Main:1.12-4.1.20.684"
