added mixin booter as modrinth dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -102,8 +102,8 @@ modrinthProjectId =
 modrinthRelations = \
   required-project:gregtech-ce-unofficial;\
   required-project:gregicality-multiblocks;\
-  requiredDependency:gregtech-food-option;
-
+  requiredDependency:gregtech-food-option;\
+    requiredDependency:mixin-booter;
 
 # Publishing to CurseForge requires you to set the CURSEFORGE_API_KEY environment variable to one of your CurseForge API tokens.
 
